Fix overflow issue with auto scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -405,14 +405,14 @@ textarea:focus {
     height: 65%;
     min-height: 300px;
     max-height: 400px;
-    overflow: scroll;
+    overflow: auto;
     margin-bottom: 10px;
 }
 
 
  .loaded_conversations {
     max-height: 216px;
-    overflow: scroll;
+    overflow: auto;
     width:100%;
  }
 
